2011-01-26  Andrey Kosyakov  <caseq@chromium.org>

Reviewed by Pavel Feldman.

        Web Inspector: summary bar is not resized properly with the rest of network panel
        - Set the size for 304/not modified resources from cached resource.
        - Add response headers size to resource transfer size.
        https://bugs.webkit.org/show_bug.cgi?id=52886

        * inspector/InspectorResourceAgent.cpp:
        (WebCore::InspectorResourceAgent::didReceiveResponse):
        * inspector/front-end/Resource.js:
        (WebInspector.Resource):
        (WebInspector.Resource.prototype.get transferSize):
        (WebInspector.Resource.prototype.set responseHeaders):
        (WebInspector.Resource.prototype._headersSize):
        (WebInspector.Resource.prototype._mimeTypeIsConsistentWithType):


Canonical link: https://commits.webkit.org/66910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76690 268f45cc-cd09-0410-ab3c-d52691b4dbfc